# djangoBackend

./: commands.txt  db.sqlite3  pyproject.toml
quickstart/: admin.py  models.py  serializers.py  views.py
quickstart/migrations/: 0001_initial.py  0002_alter_category_options.py
tutorial/: settings.py  urls.py
